Set concrete python version for CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,10 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
       - name: Install copier
         run: pip install copier
 
