--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+          cache: 'pip'
 
-      - name: Install copier
-        run: pip install copier
+      - name: Install python dependencies (copier)
+        run: pip install -r requirements.txt
 
       - name: Run tests
         run: ./runTests.sh
