--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           cache: 'pip'
 
       - name: Install python dependencies (copier)
-        run: pip install -r requirements.txt
+        run: pip install --no-deps -r requirements.txt
 
       - name: Run tests
         run: ./runTests.sh
